Move items into home directory

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                     <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="col-md-12 text-center">
                             <div class="heading">
-                                <h1 class="mx-auto title">Ajira Crypto Points</h1>
+                                <h1 class="mx-auto title">Ajira GIS</h1>
                             </div>
                         </div>
                     </div>
