Add data collector link

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/data-collector">Data Collector</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#vision">Vision</a>
                 </li>
                 <li class="nav-item">
