Enable custom error pages

--- a/400.html
+++ b/400.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Page Not Found</title>
+  <title>Bad Request</title>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/static/ajiragis_api/dist/css/error.css">
   <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
@@ -18,12 +18,12 @@
           <div class="clip"><div class="shadow"><span class="digit firstDigit"></span></div></div>
           <div class="msg">OH!<span class="triangle"></span></div>
         </div>
-        <h2 class="h1">Sorry! Page not found</h2>
+        <h2 class="h1">Sorry! I don't understand what you are trying to do</h2>
       </div>
     </div>
   </div>
   <!-- Error Page -->
   <script  src="/static/ajiragis_api/dist/js/error.js"></script>
-  <script type="text/javascript">errorCode(4, 0, 4);</script>
+  <script type="text/javascript">errorCode(4, 0, 0);</script>
 </body>
 </html>
