--- a/index.html
+++ b/index.html
@@ -63,20 +63,29 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/data-collector">Data Collector</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#vision">Vision</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#timeline">Timeline</a>
+                    <a class="nav-link js-scroll-trigger" href="#earn">Earn</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#faq">White Paper </a>
+                    <a class="nav-link js-scroll-trigger" href="#developers">Developers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Connect</a>
+                    <a class="nav-link js-scroll-trigger" href="#business">Business</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#ajira-points">AjiraPoints</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#timeline">Roadmap</a>
+                </li>
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link js-scroll-trigger" href="#faq">White Paper </a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link js-scroll-trigger" href="#contact">Connect</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </div>
@@ -96,14 +105,14 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                             </div>
                         </div>
                     </div>
-                    <h4>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel blandit est. Proin pulvinar est
-                        at facilisis gravida. Nullam aliquam vulputate varius. Donec a dapibus massa. Fusce neque
-                        tortor, auctor in mauris eget, scelerisque facilisis nunc. Proin nec lectus odio. Donec ac
-                        aliquam nulla. Nunc eget lectus mollis, sodales nibh id, cursus leo. Sed eget lorem a nulla
-                        vulputate ornare sed in augue. Curabitur dignissim libero vel ligula finibus, at posuere mi
-                        luctus.
-                    </h4>
+                    <!--<h4>-->
+                        <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel blandit est. Proin pulvinar est-->
+                        <!--at facilisis gravida. Nullam aliquam vulputate varius. Donec a dapibus massa. Fusce neque-->
+                        <!--tortor, auctor in mauris eget, scelerisque facilisis nunc. Proin nec lectus odio. Donec ac-->
+                        <!--aliquam nulla. Nunc eget lectus mollis, sodales nibh id, cursus leo. Sed eget lorem a nulla-->
+                        <!--vulputate ornare sed in augue. Curabitur dignissim libero vel ligula finibus, at posuere mi-->
+                        <!--luctus.-->
+                    <!--</h4>-->
 
                 </div>
             </div>
@@ -114,7 +123,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <!-- <img src="img/bg-curve.png" alt=""> -->
 </div>
 
-<!-- APP ABOUT
+<!-- APP VISION
     ================-->
 <section id="vision" class="app-about">
     <div class="container">
@@ -129,25 +138,72 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         </div>
 
         <div class="row first">
-            <div class="col-md-8 m-auto wow fadeInRight" data-wow-delay="0.6s">
+            <div class="col-md-8 m-auto">
                 <div class="app-about-cont">
-                    <p>Duis vulputate elit pulvinar, imperdiet neque venenatis, pretium arcu. Aliquam velit lorem,
-                        eleifend nec ultrices quis, consequat et nibh. Nulla a nibh quis quam suscipit malesuada.
-                        Curabitur ac blandit dolor. Sed gravida porttitor risus, eu varius velit pharetra at. Vivamus
-                        nec enim ac lectus blandit feugiat. In pharetra mattis tempus. Integer tincidunt nisi vel
-                        vehicula rutrum. Morbi dictum scelerisque nulla, ut hendrerit velit bibendum sit amet. Sed
-                        varius, nibh at tempor tempor, mauris magna auctor eros, et volutpat mi nisi vel nibh. Etiam
-                        cursus, sem vel efficitur hendrerit, tellus dui commodo orci, eget gravida elit elit aliquam ex.
-                        Phasellus urna sapien, accumsan ac est at, sollicitudin convallis lectus. Vestibulum eros odio,
-                        hendrerit a turpis sit amet, pellentesque ullamcorper orci. Aenean justo tellus, commodo nec
-                        scelerisque nec, tristique sed erat.</p>
+                    <p>Ajira GIS (AGIS) is a decentralized machine learning system that provides human language
+                        interfaces in African languages, and rewards people for training the artificial intelligence to
+                        translate these languages. AGIS enables locally targeted services such as personal assistant,
+                        financial management, virtual customer support, and other personalized services.
+                        AGIS uses a blockchain platform to add human involvement in building the artificial intelligence.</p>
+                    <br>
+                    <p>
+                        Anyone can participate in the platform and be paid for contributing to the AGIS.
+                        Workers can perform digital tasks (e.g. translations, AI training), or provide data to the AGIS
+                        in exchange for Ajira Points - the medium of exchange of value for providing or consuming
+                        services in the Ajira ecosystem. Businesses will pay to access services such as language
+                        translation APIs, and  speech-to-text conversion for their applications.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<!-- OUR PROCESS
+<!-- APP EARN
+    ================-->
+<section id="earn" class="our-process ">
+    <div class="container">
+
+        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-md-12 text-center">
+                <div class="heading">
+                    <h1>Earn</h1>
+                    <div class="bord-bot"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row first">
+            <div class="col-md-8 m-auto wow fadeInRight" data-wow-delay="0.6s">
+                <div class="app-about-cont">
+                    <p>
+                        We connect crowdworkers to digital tasks. You can help train our machine translation system
+                        to enable us to bring modern technological advances such as voice-activated services in your local languages.
+                    </p>
+                    <div class="heading">
+                        <h5>Digital Tasks</h5>
+                    </div>
+                    <p>
+                        You can earn Ajira Points by translating or verifying other translations in your native language.
+                        You can also create text in your language and submit it for verification.
+                        All you need is a computer or mobile device with internet access.
+                    </p>
+                    <strong>How it works:</strong>
+                    <ol>
+                        <li><p>Sign up to AGIS</p></li>
+                        <li><p>Fill out your language preference</p></li>
+                        <li><p>Request for a task</p></li>
+                        <li><p>Translate the given text or submit language text</p></li>
+                        <li><p>Get paid after your work is verified</p></li>
+                    </ol>
+                    <a class="btn btn-white mt-4 py-2 px-3 whitepaper" href="https://dev.ajira.world/data-collector/">Click to begin</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- OUR TIMELINE
     ================-->
 <section id="timeline" class="our-process timeline">
 
@@ -216,7 +272,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     </div>
 </section>
 
-<!-- FAQ
+<!-- WHITEPAPER
     ================-->
 <section id="faq" class="faq py-5">
     <div class="container">
@@ -242,46 +298,46 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 
 <!-- CONTACT
     ================-->
-<section id="contact" class="contact">
-    <div class="container">
-        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="col-md-12 text-center">
-                <div class="heading">
-                    <h1>Conect On Social</h1>
-                    <div class="bord-bot"></div>
-                    <p class="wow fadeInUp" data-wow-delay="0.4s">Connect with us on social networking sites</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-6 text-center">
-                <div class="contact-cont wow fadeInUp" data-wow-delay="0.3s">
-                    <a href="#">
-                        <img src="img/icon/icon-1.png" alt="" class="img-fluid">
-                        <h5>10000+ Likes</h5>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
-                <div class="contact-cont wow fadeInUp" data-wow-delay="0.6s">
-                    <a href="#">
-                        <img src="img/icon/icon-2.png" alt="" class="img-fluid">
-                        <h5>8000+ Followers</h5>
-                    </a>
-                </div>
-            </div>
+<!--<section id="contact" class="contact">-->
+    <!--<div class="container">-->
+        <!--<div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">-->
+            <!--<div class="col-md-12 text-center">-->
+                <!--<div class="heading">-->
+                    <!--<h1>Conect On Social</h1>-->
+                    <!--<div class="bord-bot"></div>-->
+                    <!--<p class="wow fadeInUp" data-wow-delay="0.4s">Connect with us on social networking sites</p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-4 col-sm-6 text-center">-->
+                <!--<div class="contact-cont wow fadeInUp" data-wow-delay="0.3s">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/icon/icon-1.png" alt="" class="img-fluid">-->
+                        <!--<h5>10000+ Likes</h5>-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-4 col-sm-6 text-center">-->
+                <!--<div class="contact-cont wow fadeInUp" data-wow-delay="0.6s">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/icon/icon-2.png" alt="" class="img-fluid">-->
+                        <!--<h5>8000+ Followers</h5>-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="col-md-4 col-sm-6 text-center">
-                <div class="contact-cont wow fadeInUp" data-wow-delay="1.2s">
-                    <a href="#">
-                        <img src="img/icon/icon-3.png" alt="" class="img-fluid">
-                        <h5>53000+ View</h5>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+            <!--<div class="col-md-4 col-sm-6 text-center">-->
+                <!--<div class="contact-cont wow fadeInUp" data-wow-delay="1.2s">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/icon/icon-3.png" alt="" class="img-fluid">-->
+                        <!--<h5>53000+ View</h5>-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
 
 <!-- FOOTER
     ==============-->
