Add remaining data

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                     <a class="nav-link js-scroll-trigger" href="#ajira-points">AjiraPoints</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#timeline">Roadmap</a>
+                    <a class="nav-link js-scroll-trigger" href="#roadmap">Roadmap</a>
                 </li>
                 <!--<li class="nav-item">-->
                     <!--<a class="nav-link js-scroll-trigger" href="#faq">White Paper </a>-->
                 <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link js-scroll-trigger" href="#contact">Connect</a>-->
-                <!--</li>-->
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Connect</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -97,8 +97,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-lg-12 my-auto">
-                <div class="header-content mx-auto  animated wow zoomIn" data-wow-duration="0.3s" data-wow-delay=".1s">
-                    <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="header-content mx-auto">
+                    <div class="row mb-5">
                         <div class="col-md-12 text-center">
                             <div class="heading">
                                 <h1 class="mx-auto title">Ajira GIS</h1>
@@ -128,7 +128,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 <section id="vision" class="app-about">
     <div class="container">
 
-        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="row mb-5">
             <div class="col-md-12 text-center">
                 <div class="heading">
                     <h1>Vision</h1>
@@ -164,7 +164,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 <section id="earn" class="our-process ">
     <div class="container">
 
-        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="row mb-5">
             <div class="col-md-12 text-center">
                 <div class="heading">
                     <h1>Earn</h1>
@@ -174,7 +174,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         </div>
 
         <div class="row first">
-            <div class="col-md-8 m-auto wow fadeInRight" data-wow-delay="0.6s">
+            <div class="col-md-8 m-auto">
                 <div class="app-about-cont">
                     <p>
                         We connect crowdworkers to digital tasks. You can help train our machine translation system
@@ -197,21 +197,136 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                         <li><p>Get paid after your work is verified</p></li>
                     </ol>
                     <a class="btn btn-white mt-4 py-2 px-3 whitepaper" href="https://dev.ajira.world/data-collector/">Click to begin</a>
+                    <p>
+
+                    </p>
+                    <div class="heading">
+                        <h5>Mining</h5>
+                    </div>
+                    <p>
+                        Become an AGIS processing or storage provider (miner) to generate income.
+                        In order to teach the AI all these languages and to gradually improve its models,
+                        it will need a lot of data, compute power and connectivity.
+                        The Machine Learning neural network operation is decentralized and distributed over nodes
+                        through blockchain technology. By decentralizing the AI network, participants can provide
+                        computing and storage nodes to the AGIS network, and be paid for their AI resource contribution.
+                        Miners can install the AGIS software and join the network to mine Ajira Points, which will be
+                        rewarded for compute processing and storage capacity. The more compute and storage resources
+                        are offered to the shared AGIS ecosystem, the faster the AI training,
+                        and the more Ajira Points are rewarded.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<!-- OUR TIMELINE
-    ================-->
-<section id="timeline" class="our-process timeline">
-
+<!--DEVELOPERS-->
+<section id="developers" class="app-about">
     <div class="container">
-        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
+
+        <div class="row mb-5">
             <div class="col-md-12 text-center">
                 <div class="heading">
-                    <h1>Timeline</h1>
+                    <h1>Developers</h1>
+                    <div class="bord-bot"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row first">
+            <div class="col-md-8 m-auto">
+                <div class="app-about-cont">
+                    <p>
+                        AGIS is an open-source product that aims to innovate more effectively and solve shared problems.
+                        We invite developers to participate in the Ajira community and earn Ajira Points for their
+                        development contribution to the project. Once your code is reviewed and accepted into the
+                        official development branch, you will receive a bounty in Ajira Points.
+                        The AGIS source is hosted on <a href="">Github</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--BUSINESS-->
+<section id="business" class="our-process ">
+    <div class="container">
+
+        <div class="row mb-5">
+            <div class="col-md-12 text-center">
+                <div class="heading">
+                    <h1>Business</h1>
+                    <div class="bord-bot"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row first">
+            <div class="col-md-8 m-auto">
+                <div class="app-about-cont">
+                    <p>
+                        Businesses that need to translate content can integrate their applications easily with simple
+                        programmatic interfaces for low-cost localization solutions.
+                        AGIS will provide fast and dynamic translation services through translation APIs that support African languages.
+                    </p>
+                    <p>
+                        Businesses will benefit from accessing our machine translation services at a competitive cost.
+                        AGIS makes the Machine Learning neural network operation decentralized and distributed over nodes through blockchain technology.
+                        This reduces the computing costs compared to traditional centralized AI computing servers, hence passing on the savings to businesses.
+                    </p>
+                    <p>
+                        For more information, please <a href="#contact">contact us</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--AJIRA POINTS-->
+<section id="ajira-points" class="app-about">
+    <div class="container">
+
+        <div class="row mb-5">
+            <div class="col-md-12 text-center">
+                <div class="heading">
+                    <h1>Ajira Points</h1>
+                    <div class="bord-bot"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row first">
+            <div class="col-md-8 m-auto">
+                <div class="app-about-cont">
+                    <p>
+                        Ajira Points are the medium of exchange for consuming or providing services in the AGIS ecosystem.
+                        Workers earn Ajira Points when they perform translations and contribute language data to the artificial intelligence.
+                        Miners earn Ajira Points by contributing AI compute and storage resources.
+                        Businesses will pay for translation services using Ajira Points.
+                    </p>
+                    <p>
+                        Ajira Points can be exchanged for fiat currency, cryptocurrencies, and loyalty points.
+                        Ajira Points can be held in a cryptocurrency wallet that allows owners to store tokens.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- OUR ROADMAP
+    ================-->
+<section id="roadmap" class="our-process timeline">
+
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md-12 text-center">
+                <div class="heading">
+                    <h1>Roadmap</h1>
                     <div class="bord-bot"></div>
                 </div>
             </div>
@@ -219,50 +334,74 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 
 
         <div class="row">
-            <div class="col-md-12 bounceInUp" data-wow-delay="0.6s">
+            <div class="col-md-12">
                 <div class="servie-img text-center">
                         <div id="target-container">
                             <div id="dot">
                             </div>
                             <div class="children">
                                 <h3>
-                                    May 25, 2017
+                                    AGIS Inception
                                 </h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet, nemore volumus cu sea.
-                                </p>
+                                <ul class="text-left">
+                                    <li>
+                                        Concept development
+                                    </li>
+                                    <li>
+                                        Research phase to define decentralized machine learning system
+                                    </li>
+                                    <li>
+                                        Assembling the team.
+                                    </li>
+                                </ul>
                             </div>
                             <div class="children">
                                 <h3>
-                                    September 26, 2017
+                                    Proof of Concept
                                 </h3>
-                                <p>
-                                    Eum no solet graeco vivendo, his ancillae propriae ad, nec eu diam illum vidisse.
-                                </p>
+                                <ul class="text-left">
+                                    <li>Data collection of African language text</li>
+                                    <li>Proof of concept</li>
+                                </ul>
                             </div>
                             <div class="children ">
                                 <h3>
-                                    Q4 2017
+                                    Alpha
                                 </h3>
-                                <p>
-                                    Nec in omnes explicari, aliquip legimus eleifend no mea, eam mazim albucius te.
-                                </p>
-                            </div>
-                            <div class="children current">
-                                <h3>
-                                    Q1 2018
-                                </h3>
-                                <p>
-                                    Quaeque euismod pri in, tantas melius sententiae no mei.
-                                </p>
+                                <ul class="text-left">
+                                    <li>Public Alpha version of mobile web app to label and validate data for crowdworkers </li>
+                                    <li>Development community engagement </li>
+                                </ul>
                             </div>
                             <div class="children">
                                 <h3>
-                                    Q3 2018
+                                    Beta
                                 </h3>
-                                <p>
-                                    Te mel malorum officiis, ad has forensibus voluptatibus.
-                                </p>
+                                <ul class="text-left">
+                                    <li>Public Beta for training neural networks</li>
+                                    <li>Partner Wallet and Exchange support for pre-ITO tokens</li>
+                                    <li>Decentralized storage on Blockchain</li>
+                                </ul>
+                            </div>
+                            <div class="children">
+                                <h3>
+                                    ITO
+                                </h3>
+                                <ul class="text-left">
+                                    <li>Token sale</li>
+                                    <li>Exchange support for fiat, loyalty points, cryptos</li>
+                                </ul>
+                            </div>
+                            <div class="children">
+                                <h3>
+                                    Ecosystem Official Release
+                                </h3>
+                                <ul class="text-left">
+                                    <li>Decentralized compute on Blockchain</li>
+                                    <li>Launch of fully-running machine learning system on Blockchain</li>
+                                    <li>Translation APIs for businesses</li>
+                                    <li>Partnership programs with businesses</li>
+                                </ul>
                             </div>
                             <span class="scroll-end"></span>
                         </div>
@@ -274,70 +413,70 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 
 <!-- WHITEPAPER
     ================-->
-<section id="faq" class="faq py-5">
-    <div class="container">
-
-        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="col-md-12 text-center">
-                <div class="heading">
-                    <h1>Download Whitepaper</h1>
-                    <div class="bord-bot"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="text-center">
-                    <button class="btn btn-white mt-4 py-2 px-3 whitepaper">Download White Paper</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<!-- CONTACT
-    ================-->
-<!--<section id="contact" class="contact">-->
+<!--<section id="faq" class="faq py-5">-->
     <!--<div class="container">-->
+
         <!--<div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">-->
             <!--<div class="col-md-12 text-center">-->
                 <!--<div class="heading">-->
-                    <!--<h1>Conect On Social</h1>-->
+                    <!--<h1>Download Whitepaper</h1>-->
                     <!--<div class="bord-bot"></div>-->
-                    <!--<p class="wow fadeInUp" data-wow-delay="0.4s">Connect with us on social networking sites</p>-->
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
         <!--<div class="row">-->
-            <!--<div class="col-md-4 col-sm-6 text-center">-->
-                <!--<div class="contact-cont wow fadeInUp" data-wow-delay="0.3s">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/icon/icon-1.png" alt="" class="img-fluid">-->
-                        <!--<h5>10000+ Likes</h5>-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-md-4 col-sm-6 text-center">-->
-                <!--<div class="contact-cont wow fadeInUp" data-wow-delay="0.6s">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/icon/icon-2.png" alt="" class="img-fluid">-->
-                        <!--<h5>8000+ Followers</h5>-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="col-md-4 col-sm-6 text-center">-->
-                <!--<div class="contact-cont wow fadeInUp" data-wow-delay="1.2s">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/icon/icon-3.png" alt="" class="img-fluid">-->
-                        <!--<h5>53000+ View</h5>-->
-                    <!--</a>-->
+            <!--<div class="col-md-12">-->
+                <!--<div class="text-center">-->
+                    <!--<button class="btn btn-white mt-4 py-2 px-3 whitepaper">Download White Paper</button>-->
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
     <!--</div>-->
 <!--</section>-->
+
+
+<!-- CONTACT
+    ================-->
+<section id="contact" class="contact">
+    <div class="container">
+        <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-md-12 text-center">
+                <div class="heading">
+                    <h1>Conect On Social</h1>
+                    <div class="bord-bot"></div>
+                    <p class="wow fadeInUp" data-wow-delay="0.4s">Connect with us on social networking sites</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-6 text-center">
+                <div class="contact-cont wow fadeInUp" data-wow-delay="0.3s">
+                    <a href="#">
+                        <img src="img/icon/icon-1.png" alt="" class="img-fluid">
+                        <h5>10000+ Likes</h5>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 text-center">
+                <div class="contact-cont wow fadeInUp" data-wow-delay="0.6s">
+                    <a href="#">
+                        <img src="img/icon/icon-2.png" alt="" class="img-fluid">
+                        <h5>8000+ Followers</h5>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 text-center">
+                <div class="contact-cont wow fadeInUp" data-wow-delay="1.2s">
+                    <a href="#">
+                        <img src="img/icon/icon-3.png" alt="" class="img-fluid">
+                        <h5>53000+ View</h5>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- FOOTER
     ==============-->
