--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ License URL: https://creativecommons.org/licenses/by/4.0/
   <link href="img/mobiapp_logo_32dp.png" rel="icon" sizes="32x32" type="image/png">
   <meta content="img/mobiapp_logo_96dp.png" name="msapplication-TileImage">
 
-  <meta property="og:url" content="https://www.boostraptheme.com/demo/index.html"/>
   <meta property="og:title" content="Ajira"/>
   <meta property="og:locale" content="en_IN"/>
   <meta property="og:site_name" content="Ajira"/>
@@ -36,6 +35,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link href="css/timeline.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
 
   <script src="js/jquery.min.js"></script>
@@ -105,14 +105,9 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               </div>
             </div>
           </div>
-          <!--<h4>-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel blandit est. Proin pulvinar est-->
-          <!--at facilisis gravida. Nullam aliquam vulputate varius. Donec a dapibus massa. Fusce neque-->
-          <!--tortor, auctor in mauris eget, scelerisque facilisis nunc. Proin nec lectus odio. Donec ac-->
-          <!--aliquam nulla. Nunc eget lectus mollis, sodales nibh id, cursus leo. Sed eget lorem a nulla-->
-          <!--vulputate ornare sed in augue. Curabitur dignissim libero vel ligula finibus, at posuere mi-->
-          <!--luctus.-->
-          <!--</h4>-->
+          <h4>
+            Machine learning system driven by blockchain technology
+          </h4>
 
         </div>
       </div>
@@ -324,9 +319,9 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 </section>
 
 
-<!-- OUR ROADMAP
+<!-- OUR ROADMAP 1
     ================-->
-<section id="roadmap" class="our-process timeline">
+<section id="roadmap" class="our-process timeline1">
 
   <div class="container">
     <div class="row mb-5">
@@ -417,6 +412,120 @@ License URL: https://creativecommons.org/licenses/by/4.0/
   </div>
 </section>
 
+
+<!--ROADMAP 2-->
+<section id="roadmap2" class="our-process">
+
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-md-12 text-center">
+        <div class="heading">
+          <h1>Roadmap</h1>
+          <div class="bord-bot"></div>
+        </div>
+      </div>
+    </div>
+<div class="row">
+  <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="timeline">
+      <div class="timeline__wrap">
+        <div class="timeline__items">
+          <div class="timeline__item">
+            <div class="timeline__content">
+              <h3>
+                Ecosystem Official Release
+              </h3>
+              <ul class="text-left">
+                <li>Decentralized compute on Blockchain</li>
+                <li>Launch of fully-running machine learning system on Blockchain</li>
+                <li>Translation APIs for businesses</li>
+                <li>Partnership programs with businesses</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline__item">
+            <div class="timeline__content">
+              <h3>
+                ITO
+              </h3>
+              <ul class="text-left">
+                <li>Token sale</li>
+                <li>Exchange support for fiat, loyalty points, cryptos</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline__item">
+            <div class="timeline__content">
+              <h3>
+                Beta
+              </h3>
+              <ul class="text-left">
+                <li>Public Beta for training neural networks</li>
+                <li>Partner Wallet and Exchange support for pre-ITO tokens</li>
+                <li>Decentralized storage on Blockchain</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline__item">
+            <div class="timeline__content">
+              <h3>
+                Alpha
+              </h3>
+              <ul class="text-left">
+                <li>Public Alpha version of mobile web app to label and validate data for crowdworkers</li>
+                <li>Development community engagement</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline__item">
+            <div class="timeline__content">
+              <h3>
+                Proof of Concept
+              </h3>
+              <ul class="text-left">
+                <li>Data collection of African language text</li>
+                <li>Proof of concept</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline__item">
+            <div class="timeline__content">
+              <h3>
+                AGIS Inception
+              </h3>
+              <ul class="text-left">
+                <li>
+                  Concept development
+                </li>
+                <li>
+                  Research phase to define decentralized machine learning system
+                </li>
+                <li>
+                  Assembling the team.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!--<div class="timeline__item">-->
+            <!--<div class="timeline__content">-->
+              <!--<h2>2004</h2>-->
+              <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="timeline__item">-->
+            <!--<div class="timeline__content">-->
+              <!--<h2>2002</h2>-->
+              <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>-->
+              <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>-->
+            <!--</div>-->
+          <!--</div>-->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
+
 <!-- WHITEPAPER
     ================-->
 <!--<section id="faq" class="faq py-5">-->
@@ -499,6 +608,15 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="js/timeline.min.js"></script>
+  <script>
+    timeline(document.querySelectorAll('.timeline'), {
+      forceVerticalMode: 700,
+      mode: 'horizontal',
+      verticalStartPosition: 'left',
+      visibleItems: 4
+    });
+  </script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
