Minor edits on content in index.html.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <meta name="description"
-        content="Ajira crypto website"/>
+        content="The Ajira GIS website"/>
   <link href="img/mobiapp_logo_96dp.png" rel="apple-touch-icon" sizes="96x96">
   <link href="img/mobiapp_logo_96dp.png" rel="icon" sizes="96x96" type="image/png">
   <link href="img/mobiapp_logo_32dp.png" rel="icon" sizes="32x32" type="image/png">
@@ -75,7 +75,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
           <a class="nav-link js-scroll-trigger" href="#business">Business</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#ajira-points">AjiraPoints</a>
+          <a class="nav-link js-scroll-trigger" href="#ajira-points">Ajira Points</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#roadmap">Roadmap</a>
@@ -106,7 +106,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             </div>
           </div>
           <h4>
-            Machine learning system driven by blockchain technology
+            A machine learning system for language interfaces driven by blockchain technology
           </h4>
 
         </div>
@@ -137,7 +137,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <div class="app-about-cont">
           <p>Ajira GIS (AGIS) is a decentralized machine learning system that provides human language
             interfaces in African languages, and rewards people for training the artificial intelligence to
-            translate these languages. AGIS enables locally targeted services such as personal assistant,
+            learn these languages. AGIS enables locally targeted services such as personal assistant,
             financial management, virtual customer support, and other personalized services.
             AGIS uses a blockchain platform to add human involvement in building the artificial intelligence.</p>
           <br>
@@ -175,10 +175,11 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             We connect crowdworkers to digital tasks. You can help train our machine translation system
             to enable us to bring modern technological advances such as voice-activated services in your local
             languages.
-          </p>
-          <div class="heading">
+          </p> 
+          <br>
+          <div class="heading"> 
             <h5>Digital Tasks</h5>
-          </div>
+          </div> 
           <p>
             You can earn Ajira Points by translating or verifying other translations in your native language.
             You can also create text in your language and submit it for verification.
@@ -197,6 +198,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
           <p>
 
           </p>
+          <br>
           <div class="heading">
             <h5>Mining</h5>
           </div>
@@ -239,7 +241,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             We invite developers to participate in the Ajira community and earn Ajira Points for their
             development contribution to the project. Once your code is reviewed and accepted into the
             official development branch, you will receive a bounty in Ajira Points.
-            The AGIS source is hosted on <a href="">Github</a>
+            The AGIS source is hosted on <a href="https://github.com/paxenarius/paxenarius.github.io/blob/master/contributing.md">Github</a>
           </p>
         </div>
       </div>
@@ -443,7 +445,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <div class="row mb-5 wow fadeInUp" data-wow-delay="0.3s">
       <div class="col-md-12 text-center">
         <div class="heading">
-          <h1>Conect On Social</h1>
+          <h1>Connect On Social</h1>
           <div class="bord-bot"></div>
           <p class="wow fadeInUp" data-wow-delay="0.4s">Connect with us on social networking sites</p>
         </div>
