--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             We connect crowdworkers to digital tasks. You can help train our machine translation system
             to enable us to bring modern technological advances such as voice-activated services in your local
             languages.
-          </p> 
+          </p>
           <br>
-          <div class="heading"> 
+          <div class="heading">
             <h5>Digital Tasks</h5>
-          </div> 
+          </div>
           <p>
             You can earn Ajira Points by translating or verifying other translations in your native language.
             You can also create text in your language and submit it for verification.
@@ -193,7 +193,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             <li><p>Translate the given text or submit language text</p></li>
             <li><p>Get paid after your work is verified</p></li>
           </ol>
-          <a class="btn btn-white mt-4 py-2 px-3 whitepaper" href="https://dev.ajira.world/data-collector/">Click to
+          <a class="btn btn-white mt-4 py-2 px-3 whitepaper" href="https://dev1.ajira.world/translator">Click to
             begin</a>
           <p>
 
